# whisper-lm-fusion

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SSOT.md  decoding_strategy.md  design.md  implementation_plan.md  principles.md  stt_autoresearch_technique_taxonomy_wide.md
docs/archive/: principles.md
docs/dev/: implementation_plan.md  review_guidelines.md
docs/dev/reviews/: 2026-06-11-control-surface.md  README.md  _TEMPLATE.md
docs/guide/: fusion.md  parameters.md  pipeline.md
docs/research/: decoding_strategy.md  pipeline_control_surface.md
docs/research/assets/: all_experiment_idea_inventory.md  cer15_method_and_parameter_catalog.md
examples/: basic.py  plain_stt.py  segments.py  tune_policies.py  with_fusion.py
scripts/: ct2_env.sh  smoke_transcribe.py
src/stt_wrapper/: __init__.py  _decode.py  config.py  engine.py
src/stt_wrapper/backends/: __init__.py  base.py  ct2.py
src/whisper_lm_fusion/: __init__.py  _decode.py  config.py  engine.py  metadata.py  results.py
src/whisper_lm_fusion/backends/: __init__.py  base.py  ct2.py
tests/: test_decode.py  test_engine.py  test_metadata.py
